HelloUltraviolet/Fixtures/RejectedSource/FFI/HostedExportDiagnosticOwnership/Source/Main.uv
//! Rejected FFI specimen for hosted-export visible FfiSafe diagnostic ownership.

public record HostedDiagnosticContext {
    public sys: System
}

[[host_export("C")]]
public procedure hostedVisibleBool(context: HostedDiagnosticContext, value: bool) -> i32 {
    return 0
}
